--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
 
                         <div class="col-lg-3 col-12">
                             <div class="image-hover-thumb">
-                                <img src="photos/groom.jpg" class="about-image img-fluid" alt="">
+                                <!-- <img src="photos/groom.jpg" class="about-image img-fluid" alt=""> -->
                             </div>
                         </div>
 
                         <div class="col-lg-3 col-12">
                             <div class="about-info-wrap d-flex flex-column">
                                 <div class="about-info-title d-flex align-items-center my-3">
-                                    <h4>egew</h4>
+                                    <h4>Xuân Long</h4>
 
                                     <span class="about-tag ms-2">Chú rể</span>
                                 </div>
@@ -164,17 +164,17 @@
                         </div>
                         <div class="col-lg-3 col-12">
                             <div class="image-hover-thumb">
-                                <img src="photos/bride.jpg" class="about-image img-fluid" alt="">
+                                <!-- <img src="photos/bride.jpg" class="about-image img-fluid" alt=""> -->
                             </div>
                         </div>
 
                         <div class="col-lg-3 col-12">
                             <div class="about-info-wrap d-flex flex-column">
                                 <div class="about-info-title d-flex align-items-center my-3">
-                                    <h4>ưgewgew</h4>
+                                    <h4>Anh Thư</h4>
                                     <span class="about-tag ms-2">Cô dâu</span>
                                 </div>
-                                <p>Mình học sư phạm toán nhưng lại làm việc trong ngành IT. Ở bên ngoài thì mình là một gái chân thành, đáng yêu, mê mèo và thích đi du lịch.</p>
+                                <p>Mình học sư phạm anh nhưng lại làm việc trong ngành giáo viên. Ở bên ngoài thì mình là một gái chân thành, đáng yêu, mê mèo và thích đi du lịch.</p>
                             </div>
                         </div>
 
@@ -192,7 +192,7 @@
                         </div>
                         <div class="col-lg-3 col-12">
                             <div class="image-hover-thumb">
-                                <img src="photos/gallery/VIN00555.JPG" class="about-image img-fluid" alt="">
+                                <!-- <img src="photos/gallery/VIN00555.JPG" class="about-image img-fluid" alt=""> -->
                             </div>
                         </div>
                         <div class="col-lg-3 col-12">
@@ -210,7 +210,7 @@
                                 <img src="photos/chungxe.jpg" class="about-image img-fluid" alt="">
                             </div> -->
                             <div class="image-hover-thumb">
-                                <img src="photos/gallery/VIN00584.JPG" class="about-image img-fluid" alt="">
+                                <!-- <img src="photos/gallery/VIN00584.JPG" class="about-image img-fluid" alt=""> -->
                             </div>
                         </div>
                     </div>
@@ -235,7 +235,7 @@
 
                         <div class="col-lg-4 col-md-6 col-12 d-flex flex-column mb-4 mb-lg-0 mb-md-0">
                             <div class="image-hover-thumb">
-                                <img src="photos/dinh-hon-2.jpg" class="img-fluid" alt="">
+                                <!-- <img src="photos/dinh-hon-2.jpg" class="img-fluid" alt=""> -->
                             </div>
 
                             <div class="section-block">
@@ -255,7 +255,7 @@
 
                         <div class="col-lg-4 col-md-6 col-12 d-flex flex-column mb-4 mb-lg-0 mb-md-0">
                             <div class="image-hover-thumb">
-                                <img src="photos/khoe-nhan.jpg" class="img-fluid" alt="">
+                                <!-- <img src="photos/khoe-nhan.jpg" class="img-fluid" alt=""> -->
                             </div>
 
                             <div class="section-block">
@@ -308,7 +308,7 @@
                         <div class="col-lg-4 col-12">
                             <div class="gallery-thumb image-hover-thumb">
                                 <a href="photos/gallery/VIN09849.jpg" class="popup-image">
-                                    <img src="photos/gallery/VIN09849.jpg" class="gallery-image img-fluid" alt="">
+                                    <!-- <img src="photos/gallery/VIN09849.jpg" class="gallery-image img-fluid" alt=""> -->
                                 </a>
                             </div>
                         </div>
@@ -316,13 +316,13 @@
                         <div class="col-lg-4 col-12 d-flex flex-column">
                             <div class="gallery-thumb gallery-thumb-small image-hover-thumb">
                                 <a href="photos/gallery/VIN09838.JPG" class="popup-image">
-                                    <img src="photos/gallery/VIN09838.JPG" class="gallery-image img-fluid" alt="">
+                                    <!-- <img src="photos/gallery/VIN09838.JPG" class="gallery-image img-fluid" alt=""> -->
                                 </a>
                             </div>
 
                             <div class="gallery-thumb gallery-thumb-small image-hover-thumb">
                                 <a href="photos/gallery/BOY02214.JPG" class="popup-image">
-                                    <img src="photos/gallery/BOY02214.JPG" class="gallery-image img-fluid" alt="">
+                                    <!-- <img src="photos/gallery/BOY02214.JPG" class="gallery-image img-fluid" alt=""> -->
                                 </a>
                             </div>
                         </div>
@@ -330,7 +330,7 @@
                         <div class="col-lg-4 col-12">
                             <div class="gallery-thumb image-hover-thumb">
                                 <a href="photos/gallery/VIN00849.jpg" class="popup-image">
-                                    <img src="photos/gallery/VIN00849.jpg" class="gallery-image img-fluid" alt="">
+                                    <!-- <img src="photos/gallery/VIN00849.jpg" class="gallery-image img-fluid" alt=""> -->
                                 </a>
                             </div>
                         </div>
@@ -338,13 +338,13 @@
                         <div class="col-lg-4 col-12 d-flex flex-column">
                             <div class="gallery-thumb gallery-thumb-small image-hover-thumb">
                                 <a href="photos/gallery/VIN01044.jpg" class="popup-image">
-                                    <img src="photos/gallery/VIN01044.jpg" class="gallery-image img-fluid" alt="">
+                                    <!-- <img src="photos/gallery/VIN01044.jpg" class="gallery-image img-fluid" alt=""> -->
                                 </a>
                             </div>
 
                             <div class="gallery-thumb gallery-thumb-small image-hover-thumb">
                                 <a href="photos/gallery/VIN00956.jpg" class="popup-image">
-                                    <img src="photos/gallery/VIN00956.jpg" class="gallery-image img-fluid" alt="">
+                                    <!-- <img src="photos/gallery/VIN00956.jpg" class="gallery-image img-fluid" alt=""> -->
                                 </a>
                             </div>
                         </div>
@@ -352,12 +352,12 @@
                         <div class="col-lg-4 col-12">
                             <div class="gallery-thumb image-hover-thumb">
                                 <a href="photos/gallery/VIN01004.jpg" class="popup-image">
-                                    <img src="photos/gallery/VIN01004.jpg" class="gallery-image img-fluid" alt="">
+                                    <!-- <img src="photos/gallery/VIN01004.jpg" class="gallery-image img-fluid" alt=""> -->
                                 </a>
                             </div>
                             <div class="gallery-thumb image-hover-thumb">
                                 <a href="photos/gallery/VIN09982.jpg" class="popup-image">
-                                    <img src="photos/gallery/VIN09982.jpg" class="gallery-image img-fluid" alt="">
+                                    <!-- <img src="photos/gallery/VIN09982.jpg" class="gallery-image img-fluid" alt=""> -->
                                 </a>
                             </div>
                         </div>
@@ -365,13 +365,13 @@
                         <div class="col-lg-4 col-12 d-flex flex-column">
                             <div class="gallery-thumb gallery-thumb-small image-hover-thumb">
                                 <a href="photos/gallery/VIN00916.jpg" class="popup-image">
-                                    <img src="photos/gallery/VIN00916.jpg"" class="gallery-image img-fluid" alt="">
+                                    <!-- <img src="photos/gallery/VIN00916.jpg"" class="gallery-image img-fluid" alt=""> -->
                                 </a>
                             </div>
 
                             <div class="gallery-thumb gallery-thumb-small image-hover-thumb">
                                 <a href="photos/gallery/VIN00263.JPG" class="popup-image">
-                                    <img src="photos/gallery/VIN00308.jpg" class="gallery-image img-fluid" alt="">
+                                    <!-- <img src="photos/gallery/VIN00308.jpg" class="gallery-image img-fluid" alt=""> -->
                                 </a>
                             </div>
                         </div>
@@ -379,7 +379,7 @@
                         <div class="col-lg-4 col-12">
                             <div class="gallery-thumb image-hover-thumb">
                                 <a href="photos/gallery/VIN01131.jpg" class="popup-image">
-                                    <img src="photos/gallery/VIN01131.jpg" class="gallery-image img-fluid" alt="">
+                                    <!-- <img src="photos/gallery/VIN01131.jpg" class="gallery-image img-fluid" alt=""> -->
                                 </a>
                             </div>
                         </div>
@@ -387,13 +387,13 @@
                         <div class="col-lg-4 col-12 d-flex flex-column">
                             <div class="gallery-thumb gallery-thumb-small image-hover-thumb">
                                 <a href="photos/gallery/BOY02350.JPG" class="popup-image">
-                                    <img src="photos/gallery/BOY02350.JPG" class="gallery-image img-fluid" alt="">
+                                    <!-- <img src="photos/gallery/BOY02350.JPG" class="gallery-image img-fluid" alt=""> -->
                                 </a>
                             </div>
 
                             <div class="gallery-thumb gallery-thumb-small image-hover-thumb">
                                 <a href="photos/gallery/VIN00298.jpg" class="popup-image">
-                                    <img src="photos/gallery/VIN00298.jpg" class="gallery-image img-fluid" alt="">
+                                    <!-- <img src="photos/gallery/VIN00298.jpg" class="gallery-image img-fluid" alt=""> -->
                                 </a>
                             </div>
                         </div>
@@ -401,7 +401,7 @@
                         <div class="col-lg-4 col-12">
                             <div class="gallery-thumb image-hover-thumb">
                                 <a href="photos/gallery/VIN00158.jpg" class="popup-image">
-                                    <img src="photos/gallery/VIN00158.jpg" class="gallery-image img-fluid" alt="">
+                                    <!-- <img src="photos/gallery/VIN00158.jpg" class="gallery-image img-fluid" alt=""> -->
                                 </a>
                             </div>
                         </div>
@@ -495,13 +495,13 @@
 
                             <p class="mb-2">
                                 <a href="mailto:thuyduong7241@gmail.com">
-                                    thuyduong7241@gmail.com
+                                    holongk15@gmail.com
                                 </a>
                             </p>
 
                             <p>
                                 <a href="tel: 0971-440-460">
-                                    0971-440-460
+                                    0375132318
                                 </a>
                             </p>
                         </div>
@@ -535,9 +535,9 @@
 
                     <div class="col-lg-3 col-12 mx-auto">
                         <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
-                            <span>Danh</span>
+                            <span>Long</span>
                             <i class="bi-heart brand-icon"></i>
-                            <span>Duong</span>
+                            <span>Thu</span>
                         </a>
                     </div>
 
